update code and framework

--- a/config.yaml
+++ b/config.yaml
@@ -29,8 +29,8 @@ screen_size : 120
 view : 50
 
 ##### Algo ######
-UnaHug:
-    name : 'unahug'
+UnaRL:
+    name : 'unarl'
     PREFERENCE : True
     DOUBLE : True
     DUELING : False
